--- a/css/main.css
+++ b/css/main.css
@@ -11,20 +11,7 @@ Primary use:
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
-@font-face {
-  font-family: Barlow-Regular;
-  src: url('../fonts/Barlow/Barlow-Regular.ttf'); 
-}
-
-@font-face {
-  font-family: Barlow-Medium;
-  src: url('../fonts/Barlow/Barlow-Medium.ttf'); 
-}
-
-@font-face {
-  font-family: Barlow-Bold;
-  src: url('../fonts/Barlow/Barlow-Bold.ttf'); 
-}
+@import url('https://fonts.googleapis.com/css2?family=Tajawal&display=swap');
 
 
 /*//////////////////////////////////////////////////////////////////
@@ -130,7 +117,7 @@ input.input100 {
   right: 12px;
   pointer-events: none;
 
-  font-family: Barlow-Regular;
+  font-family: 'Tajawal', sans-serif;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
@@ -189,28 +176,28 @@ input.input100 {
 /*//////////////////////////////////////////////////////////////////
 [ S-Text 0 - 15 ]*/
 .s1-txt1 {
-  font-family: Barlow-Regular;
+  font-family: 'Tajawal', sans-serif;
   font-size: 14px;
   color: #fff;
   line-height: 1;
 }
 
 .s1-txt2 {
-  font-family: Barlow-Regular;
+  font-family: 'Tajawal', sans-serif;
   font-size: 15px;
   color: #846add;
   line-height: 1.4;
 }
 
 .s1-txt3 {
-  font-family: Barlow-Regular;
+  font-family: 'Tajawal', sans-serif;
   font-size: 15px;
   color: #fff;
   line-height: 1.4;
 }
 
 .s1-txt4 {
-  font-family: Barlow-Regular;
+  font-family: 'Tajawal', sans-serif;
   font-size: 14px;
   color: #999999;
   line-height: 1.5;
@@ -220,7 +207,7 @@ input.input100 {
 /*//////////////////////////////////////////////////////////////////
 [ M-Text 16 - 25 ]*/
 .m1-txt1 {
-  font-family: Barlow-Bold;
+  font-family: 'Tajawal', sans-serif;
   font-size: 25px;
   color: #999999;
   line-height: 1.2;
@@ -232,7 +219,7 @@ input.input100 {
 /*//////////////////////////////////////////////////////////////////
 [ L-Text >= 26 ]*/
 .l1-txt1 {
-  font-family: Barlow-Medium;
+  font-family: 'Tajawal', sans-serif;
   font-size: 40px;
   line-height: 1;
   color: #fff;
